[gd_scene load_steps=4 format=3 uid="uid://l0xqyqjhees4"]

[ext_resource type="Script" path="res://Castle/Control/Testcontrol.gd" id="1_ss3e8"]
[ext_resource type="Script" path="res://Castle/Control/GridContainer.gd" id="2_ns6tj"]
[ext_resource type="Script" path="res://Castle/Control/BuildingsContainer.gd" id="3_sc2pw"]

[node name="Control" type="Control"]
visibility_layer = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_ss3e8")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
light_mask = 4
visibility_layer = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -842.0
offset_top = -473.5
offset_right = 842.0
offset_bottom = 473.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.0980392, 0.192157, 0.192157, 1)

[node name="Box" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Box"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Box/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Type" type="VBoxContainer" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Type"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "Zamek nazwa
"
horizontal_alignment = 2

[node name="Food" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Type"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "Food
"
horizontal_alignment = 2

[node name="Income" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Type"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "Income"
horizontal_alignment = 2

[node name="Numbers" type="VBoxContainer" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="NameCastle" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Numbers"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "Zamek nazwa
"

[node name="FoodValue" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Numbers"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "0
"

[node name="IncomeValue" type="Label" parent="PanelContainer/Box/VBoxContainer/PanelContainer/HBoxContainer/Numbers"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 23
text = "0
"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Box/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Box/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buildings" type="ScrollContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1250, 750)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/Buildings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 0

[node name="Buildings" type="VBoxContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/Buildings/MarginContainer2"]
layout_mode = 2
script = ExtResource("3_sc2pw")

[node name="Army" type="ScrollContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(1250, 750)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/Army"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/Army/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 3
script = ExtResource("2_ns6tj")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Box/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="ArmyButton" type="Button" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Army"

[node name="BuildingButton" type="Button" parent="PanelContainer/Box/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Buildings"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 802.0
offset_top = -489.0
offset_right = 850.0
offset_bottom = -433.0
theme_override_font_sizes/font_size = 34
text = "X"

[connection signal="UpdatePlayerStats" from="PanelContainer/Box/VBoxContainer/HBoxContainer/Buildings/MarginContainer2/Buildings" to="." method="_on_buildings_update_player_stats"]
[connection signal="CreateKnightFromCastle" from="PanelContainer/Box/VBoxContainer/HBoxContainer/Army/MarginContainer2/GridContainer" to="." method="_on_grid_container_create_knight_from_castle"]
[connection signal="pressed" from="PanelContainer/Box/VBoxContainer/HBoxContainer/VBoxContainer/ArmyButton" to="." method="_on_army_button_pressed"]
[connection signal="pressed" from="PanelContainer/Box/VBoxContainer/HBoxContainer/VBoxContainer/BuildingButton" to="." method="_on_building_button_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
